@@ -1,4 +1,18 @@
 # TSN_Idea_JavaFX
 Пример простейшего визуального приложения на JavaFX11 для IntelliJ IDEA на Java
 
-![screenshot](screenshot.png)
+![screenshot](screenshot1.png)
+
+```
+java -jar --module-path /opt/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml ./out/artifacts/JavaFxApplication_jar/JavaFxApplication.jar
+```
+
+![screenshot](screenshot2.png)
+
+![screenshot](screenshot3.png)
+
+![screenshot](screenshot4.png)
+
+```
+--module-path /opt/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
+```
